@@ -214,51 +214,51 @@
      <value key="default" type="str" value="" />
      <value key="title" type="str" value="language" />
      <value key="items" type="list" value="[('Select a Language:' ,''),
-       ('Abkhazian', 'AB'), ('Afan Oromo', 'OM'), ('Afar', 'AA'), 
-       ('Afrikaans', 'AF'), ('Albanian', 'SQ'), ('Amharic', 'AM'), 
-       ('Arabic', 'AR'), ('Armenian', 'HY'), ('Assamese', 'AS'), 
-       ('Aymara', 'AY'), ('Azerbaijani', 'AZ'), ('Bangla Bengali', 'BN'), 
-       ('Bashkir', 'BA'), ('Basque', 'EU'), ('Bhutani', 'DZ'), 
-       ('Bihari', 'BH'), ('Bislama', 'BI'), ('Breton', 'BR'), 
-       ('Bulgarian', 'BG'), ('Burmese', 'MY'), ('Byelorussian', 'BE'), 
-       ('Cambodian', 'KM'), ('Catalan', 'CA'), ('Chinese', 'ZH'), 
-       ('Corsican', 'CO'), ('Croatian', 'HR'), ('Czech', 'CS'), 
-       ('Danish', 'DA'), ('Dutch', 'NL'), ('English', 'EN'), 
-       ('Esperanto', 'EO'), ('Estonian', 'ET'), ('Faeroese', 'FO'), 
-       ('Fiji', 'FJ'), ('Finnish', 'FI'), ('French', 'FR'), 
-       ('Frisian', 'FY'), ('Gaelic Scots Gaelic', 'GD'), ('Galician', 'GL'),
-       ('Georgian', 'KA'), ('German', 'DE'), ('Greek', 'EL'), 
-       ('Greenlandic', 'KL'), ('Guarani', 'GN'), ('Gujarati', 'GU'), 
-       ('Hausa', 'HA'), ('Hebrew', 'IW'), ('Hindi', 'HI'), 
-       ('Hungarian', 'HU'), ('Icelandic', 'IS'), ('Indonesian', 'IN'), 
-       ('Interlingua', 'IA'), ('Interlingue', 'IE'), ('Inupiak', 'IK'), 
-       ('Irish', 'GA'), ('Italian', 'IT'), ('Japanese', 'JA'), 
-       ('Javanese', 'JW'), ('Kannada', 'KN'), ('Kashmiri', 'KS'), 
-       ('Kazakh', 'KK'), ('Kinyarwanda', 'RW'), ('Kirghiz', 'KY'), 
-       ('Kirundi', 'RN'), ('Korean', 'KO'), ('Kurdish', 'KU'), 
-       ('Laothian', 'LO'), ('Latin', 'LA'), ('Lettish Latvian', 'LV'), 
-       ('Lingala', 'LN'), ('Lithuanian', 'LT'), ('Macedonian', 'MK'), 
-       ('Malagasy', 'MG'), ('Malayalam', 'ML'), ('Malay', 'MS'), 
-       ('Maltese', 'MT'), ('Maori', 'MI'), ('Marathi', 'MR'), 
-       ('Moldavian', 'MO'), ('Mongolian', 'MN'), ('Nauru', 'NA'), 
-       ('Nepali', 'NE'), ('Norwegian', 'NO'), ('Occitan', 'OC'), 
-       ('Oriya', 'OR'), ('Persian', 'FA'), ('Polish', 'PL'), 
-       ('Portuguese', 'PT'), ('Punjabi', 'PA'), ('Pushto Pashto', 'PS'), 
-       ('Quechua', 'QU'), ('Rhaeto-Romance', 'RM'), ('Romanian', 'RO'), 
-       ('Russian', 'RU'), ('Samoan', 'SM'), ('Sangro', 'SG'), 
-       ('Sanskrit', 'SA'), ('Serbian', 'SR'), ('Serbo-Croatian', 'SH'), 
-       ('Sesotho', 'ST'), ('Setswana', 'TN'), ('Shona', 'SN'), 
-       ('Sindhi', 'SD'), ('Singhalese', 'SI'), ('Siswati', 'SS'), 
-       ('Slovak', 'SK'), ('Slovenian', 'SL'), ('Somali', 'SO'), 
-       ('Spanish', 'ES'), ('Sudanese', 'SU'), ('Swahili', 'SW'), 
-       ('Swedish', 'SV'), ('Tagalog', 'TL'), ('Tajik', 'TG'), 
-       ('Tamil', 'TA'), ('Tatar', 'TT'), ('Tegulu', 'TE'), ('Thai', 'TH'), 
-       ('Tibetan', 'BO'), ('Tigrinya', 'TI'), ('Tonga', 'TO'), 
-       ('Tsonga', 'TS'), ('Turkish', 'TR'), ('Turkmen', 'TK'), 
-       ('Twi', 'TW'), ('Ukrainian', 'UK'), ('Urdu', 'UR'), ('Uzbek', 'UZ'),
-       ('Vietnamese', 'VI'), ('Volapuk', 'VO'), ('Welsh', 'CY'), 
-       ('Wolof', 'WO'), ('Xhosa', 'XH'), ('Yiddish', 'JI'), 
-       ('Yoruba', 'YO'), ('Zulu', 'ZU')]" />
+       ('Abkhazian', 'ab'), ('Afan Oromo', 'om'), ('Afar', 'aa'), 
+       ('Afrikaans', 'af'), ('Albanian', 'sq'), ('Amharic', 'am'), 
+       ('Arabic', 'ar'), ('Armenian', 'hy'), ('Assamese', 'as'), 
+       ('Aymara', 'ay'), ('Azerbaijani', 'az'), ('Bangla Bengali', 'bn'), 
+       ('Bashkir', 'ba'), ('Basque', 'eu'), ('Bhutani', 'dz'), 
+       ('Bihari', 'bh'), ('Bislama', 'bi'), ('Breton', 'br'), 
+       ('Bulgarian', 'bg'), ('Burmese', 'my'), ('Byelorussian', 'be'), 
+       ('Cambodian', 'km'), ('Catalan', 'ca'), ('Chinese', 'zh'), 
+       ('Corsican', 'co'), ('Croatian', 'hr'), ('Czech', 'cs'), 
+       ('Danish', 'da'), ('Dutch', 'nl'), ('English', 'en'), 
+       ('Esperanto', 'eo'), ('Estonian', 'et'), ('Faeroese', 'fo'), 
+       ('Fiji', 'fj'), ('Finnish', 'fi'), ('French', 'fr'), 
+       ('Frisian', 'fy'), ('Gaelic Scots Gaelic', 'gd'), ('Galician', 'gl'),
+       ('Georgian', 'ka'), ('German', 'de'), ('Greek', 'el'), 
+       ('Greenlandic', 'kl'), ('Guarani', 'gn'), ('Gujarati', 'gu'), 
+       ('Hausa', 'ha'), ('Hebrew', 'iw'), ('Hindi', 'hi'), 
+       ('Hungarian', 'hu'), ('Icelandic', 'is'), ('Indonesian', 'in'), 
+       ('Interlingua', 'ia'), ('Interlingue', 'ie'), ('Inupiak', 'ik'), 
+       ('Irish', 'ga'), ('Italian', 'it'), ('Japanese', 'ja'), 
+       ('Javanese', 'jw'), ('Kannada', 'kn'), ('Kashmiri', 'ks'), 
+       ('Kazakh', 'kk'), ('Kinyarwanda', 'rw'), ('Kirghiz', 'ky'), 
+       ('Kirundi', 'rn'), ('Korean', 'ko'), ('Kurdish', 'ku'), 
+       ('Laothian', 'lo'), ('Latin', 'la'), ('Lettish Latvian', 'lv'), 
+       ('Lingala', 'ln'), ('Lithuanian', 'lt'), ('Macedonian', 'mk'), 
+       ('Malagasy', 'mg'), ('Malayalam', 'ml'), ('Malay', 'ms'), 
+       ('Maltese', 'mt'), ('Maori', 'mi'), ('Marathi', 'mr'), 
+       ('Moldavian', 'mo'), ('Mongolian', 'mn'), ('Nauru', 'na'), 
+       ('Nepali', 'ne'), ('Norwegian', 'no'), ('Occitan', 'oc'), 
+       ('Oriya', 'or'), ('Persian', 'fa'), ('Polish', 'pl'), 
+       ('Portuguese', 'pt'), ('Punjabi', 'pa'), ('Pushto Pashto', 'ps'), 
+       ('Quechua', 'qu'), ('Rhaeto-Romance', 'rm'), ('Romanian', 'ro'), 
+       ('Russian', 'ru'), ('Samoan', 'sm'), ('Sangro', 'sg'), 
+       ('Sanskrit', 'sa'), ('Serbian', 'sr'), ('Serbo-Croatian', 'sh'), 
+       ('Sesotho', 'st'), ('Setswana', 'tn'), ('Shona', 'sn'), 
+       ('Sindhi', 'sd'), ('Singhalese', 'si'), ('Siswati', 'ss'), 
+       ('Slovak', 'sk'), ('Slovenian', 'sl'), ('Somali', 'so'), 
+       ('Spanish', 'es'), ('Sudanese', 'su'), ('Swahili', 'sw'), 
+       ('Swedish', 'sv'), ('Tagalog', 'tl'), ('Tajik', 'tg'), 
+       ('Tamil', 'ta'), ('Tatar', 'tt'), ('Tegulu', 'te'), ('Thai', 'th'), 
+       ('Tibetan', 'bo'), ('Tigrinya', 'ti'), ('Tonga', 'to'), 
+       ('Tsonga', 'ts'), ('Turkish', 'tr'), ('Turkmen', 'tk'), 
+       ('Twi', 'tw'), ('Ukrainian', 'uk'), ('Urdu', 'ur'), ('Uzbek', 'uz'),
+       ('Vietnamese', 'vi'), ('Volapuk', 'vo'), ('Welsh', 'cy'), 
+       ('Wolof', 'wo'), ('Xhosa', 'xh'), ('Yiddish', 'ji'), 
+       ('Yoruba', 'yo'), ('Zulu', 'zu')]" />
      <value key="description" type="str" value="Language of content in this area." />
      <value key="max_length" type="str" value="" />
      <value key="whitespace_preserve" type="int" value="0" />
